<resources>
    <string name="ratatouilleAlarm">Ratatouille Alarm</string>
    <string name="ratatouilleTimer">Ratatouille Timer</string>
    <string name="ratatouilleForeground">Ratatouille Foreground</string>
    <string name="ratatouille">라따뚜이</string>
    <string name="appIsRunning">실행중인 타이머가 있습니다!!!</string>

    <string name="timerEnd">%s 타이머 종료!</string>
    <string name="timerEndContent">%s 타이머가 종료되었습니다. 클릭해서 레시피로 돌아가세요!</string>

    <string name="addRecipe">레시피 추가</string>
    <string name="editRecipe">레시피 수정</string>
    <string name="recipeImage">레시피 이미지</string>
    <string name="title">제목</string>
    <string name="type">종류</string>
    <string name="stuff">재료</string>
    <string name="stepTitle">단계 제목</string>
    <string name="stepImage">단계 이미지</string>
    <string name="description">설명</string>
    <string name="timer">타이머</string>
    <string name="minute">분</string>
    <string name="second">초</string>
    <string name="addStepButton">단계 추가 버튼</string>
    <string name="registerRecipe">레시피 등록</string>
    <string name="selectPhoto">사진 선택</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string-array name="photoSourceSelection">
        <item>카메라</item>
        <item>갤러리</item>
        <item>기본 이미지</item>
    </string-array>

    <string name="myRecipe">내 레시피</string>
    <string name="searchRecipe">검색</string>
    <string name="searchMenuTitle">search</string>
    <string name="orderByDate">최신순</string>
    <string name="orderByFavorite">즐겨찾기</string>
    <string name="orderByName">이름순</string>
    <string name="addRecipeButton">레시피 추가 버튼</string>
    <string name="recipeStuff">재료:</string>

    <string name="others_orderByDate">최신순</string>
    <string name="others_orderByPopular">인기순</string>
    <string name="others">힐끔보기</string>
    <string name="startTimer">타이머 시작</string>
    <string name="expectedTimeMinSec">예상 소요 시간: %s분 %s초</string>
    <string name="timerMinSec">%02d:%02d</string>

    <string name="total_time">소요시간</string>
    <string name="total_time_seconds">%s 초</string>
    <string name="total_time_min_seconds">%s 분 %s 초</string>
    <string name="update_time_year">%s년 전</string>
    <string name="update_time_month">%s달 전</string>
    <string name="update_time_day">%s일 전</string>
    <string name="update_time_hours">%s시간 전</string>
    <string name="update_time_minutes">%s분 전</string>
    <string name="update_time_seconds">%s초 전</string>

    <string name="showRecipe">레시피 보기</string>
    <string name="expectedTime">예상 소요시간</string>
    <string name="ingredient">재료</string>
    <string name="stepSummary">한눈에 보기</string>
    <string name="floatingActionButton">summary_floatingActionButton</string>

    <string name="errorOccurs">오류 발생</string>
    <string name="networkErrorMessage">네트워크와 연결이 끊어졌습니다.</string>
    <string name="severErrorMessage">서버에 문제가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="dataLoadFailMessage">데이터 로드에 실패하였습니다.</string>
    <string name="unknownErrorMessage">예상치 못한 에러가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="ratatouilleErrorMassage">레시피를 들고오던 라따뚜이가 넘어졌습니다..ㅠㅠ\n확인 버튼을 누르면 이전 화면으로 돌아갑니다.</string>
    <string name="refresh">새로고침</string>

    <string name="othersRecipe">남의 레시피</string>
    <string name="othersRecipeSearchResult">남의 레시피 검색 결과</string>
    <string name="myRecipeSearchResult">내 레시피 검색 결과</string>

    <string name="edit">수정</string>
    <string name="registFavorite">즐겨찾기 등록</string>
    <string name="cancelFavorite">즐겨찾기 제거</string>
    <string name="delete">삭제</string>
    <string name="upload">업로드</string>
    <string name="steal">훔쳐오기</string>
    <string name="steal_favorite">훔쳐와서 즐겨찾기 등록</string>
    <string name="timerButton">타이머 버튼</string>
    <string name="recipeType">레시피 종류</string>
    <string name="savingTemp">임시저장 중</string>
    <string name="noSearchResult">검색 결과가 없습니다.</string>

    <string name="deleteConfirm">삭제 확인</string>
    <string name="deleteConfirmContent">레시피를 삭제하면 다시 볼 수 없습니다.\n정말 삭제하시겠습니까?</string>
    <string name="deleteFinish">삭제 완료</string>
    <string name="deleteFinishContent">레시피가 정상적으로 삭제되었습니다.\n확인을 눌러 이전화면으로 돌아가주세요.</string>
    <string name="deleteFailed">삭제 실패</string>

    <string name="uploadSuccess">업로드 성공</string>
    <string name="uploadFailed">업로드 실패</string>

    <string name="saveSuccess">저장 성공</string>
    <string name="saveFailed">저장 실패</string>

    <string name="saveFinish">저장 완료</string>
    <string name="saveFinishContent">레시피가 정상적으로 저장되었습니다.</string>
    <string name="saveFailedContent">레시피를 저장하지 못했습니다.</string>

    <string name="tempRecipe">임시 저장된 레시피</string>
    <string name="tempRecipeContent">저장되지 않은 수정 내역이 존재합니다. 이어서 수정하시겠습니까?</string>

    <string name="exit">나가기</string>
    <string name="exitContent">변경 사항을 저장하지 않고 나가시겠습니까?</string>

    <string name="favoriteAddSuccess">즐겨찾기 추가 성공</string>
    <string name="favoriteRemoveSuccess">즐겨찾기 제거 성공</string>
    <string name="favoriteChangeSuccess">즐겨찾기 변경 실패</string>

</resources>
