<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_myRecipe"
            style="@style/Toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radioButton_orderByDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_myRecipe">

            <com.kdjj.presentation.view.home.my.TextRadioButton
                android:id="@+id/radioButton_orderByDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderByDate"
                android:button="@android:color/transparent"
                android:layout_marginLeft="24dp"/>

            <com.kdjj.presentation.view.home.my.TextRadioButton
                android:id="@+id/radioButton_orderByFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderByFavorite"
                android:button="@android:color/transparent"
                android:layout_marginLeft="24dp"/>

            <com.kdjj.presentation.view.home.my.TextRadioButton
                android:id="@+id/radioButton_orderByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderByName"
                android:button="@android:color/transparent"
                android:layout_marginLeft="24dp"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
