<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kdjj.presentation.viewmodel.recipesummary.RecipeSummaryViewModel.FabClick" />

        <variable
            name="viewModel"
            type="com.kdjj.presentation.viewmodel.recipesummary.RecipeSummaryViewModel" />

        <import type="com.kdjj.presentation.common.UtilsKt" />

        <import type="android.widget.ImageView" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.recipesummary.RecipeSummaryActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_summary"
            style="@style/Toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView_summary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_summary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.constraintlayout.widget.Group
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.liveRecipe == null ? View.GONE : View.VISIBLE}"
                    app:constraint_referenced_ids="textView_summary_recipeTypeLabel,
                                                     cardView_summary_recipeType,
                                                    textView_summary_expectedTimeLabel,
                                                    cardView_summary_expectedTime,
                                                    textView_summary_ingredientLabel,
                                                     cardView_summary_ingredient,
                                                     textView_summary_stepSummaryLabel,
                                                     cardView_summary_stepSummary" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_summary_recipeImage"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/summary_recipeImage_marginTop"
                    app:cardCornerRadius="@dimen/summary_recipeImage_cardCornerRadius"
                    android:layout_height="@dimen/summary_imageView_height"
                    android:visibility="@{viewModel.liveRecipe == null || viewModel.liveRecipe.imgPath.empty ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/recipeImage"
                        android:scaleType="centerCrop"
                        app:loadImage="@{viewModel.liveRecipe.imgPath}"
                        tools:src="@drawable/ic_baseline_fastfood_24" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/textView_summary_recipeTypeLabel"
                    style="@style/SummaryLabel"
                    android:layout_marginTop="24dp"
                    android:text="@string/recipeType"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/cardView_summary_recipeImage" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_summary_recipeType"
                    style="@style/SummaryTextCardView"
                    app:layout_constraintEnd_toEndOf="@id/guideline_summary_textRight"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/textView_summary_recipeTypeLabel">

                    <TextView
                        style="@style/SummaryText"
                        android:text="@{viewModel.liveRecipe.type.title}"
                        tools:text="한식" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView_summary_expectedTimeLabel"
                    style="@style/SummaryLabel"
                    android:text="@string/expectedTime"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/cardView_summary_recipeType" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_summary_expectedTime"
                    style="@style/SummaryTextCardView"
                    app:layout_constraintEnd_toEndOf="@id/guideline_summary_textRight"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/textView_summary_expectedTimeLabel">

                    <TextView
                        style="@style/SummaryText"
                        formatTotalTime="@{UtilsKt.calculateTotalTime(viewModel.liveRecipe)}"
                        tools:text="40분" />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/textView_summary_ingredientLabel"
                    style="@style/SummaryLabel"
                    android:text="@string/ingredient"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/cardView_summary_expectedTime" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_summary_ingredient"
                    style="@style/SummaryTextCardView"
                    app:layout_constraintEnd_toEndOf="@id/guideline_summary_textRight"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/textView_summary_ingredientLabel">

                    <TextView
                        style="@style/SummaryText"
                        android:text="@{viewModel.liveRecipe.stuff}"
                        tools:text="이것 저것 머시기\n이것 저것 머시기\n이것 저것 머시기\n이것 저것 머시기" />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/textView_summary_stepSummaryLabel"
                    style="@style/SummaryLabel"
                    android:text="@string/stepSummary"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/cardView_summary_ingredient" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_summary_stepSummary"
                    style="@style/SummaryTextCardView"
                    android:layout_marginBottom="@dimen/summary_lastItem_marginBottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline_summary_textRight"
                    app:layout_constraintStart_toStartOf="@id/guideline_summary_textLeft"
                    app:layout_constraintTop_toBottomOf="@id/textView_summary_stepSummaryLabel">

                    <TextView
                        android:id="@+id/textView_summary_stepSummary"
                        style="@style/SummaryText"
                        setStepSummary="@{viewModel.liveRecipe}"
                        tools:text="재료 준비\n면 삶기\n고기 볶기" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_summary_textLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_summary_textRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/floatingActionButton_summary"
            android:layout_width="@dimen/summary_fab_size"
            android:layout_height="@dimen/summary_fab_size"
            android:layout_marginEnd="@dimen/summary_fab_marginEnd"
            android:layout_marginBottom="@dimen/summary_fab_marginBottom"
            android:background="@drawable/bg_summary_fab"
            android:elevation="@dimen/summary_fav_elevation"
            android:onClick="@{() -> viewModel.changeFabState()}"
            android:src="@{viewModel.liveFabState.second ? @drawable/ic_baseline_keyboard_arrow_down_24 : @drawable/ic_baseline_keyboard_arrow_up_24}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_summary_fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="button_summary_favorite, button_summary_edit, button_summary_delete, button_summary_steal, button_summary_stealFavorite, button_summary_upload" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_favorite"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@{viewModel.liveRecipe.favorite == true ? @drawable/ic_baseline_star_16dp : @drawable/ic_star_white_16dp}"
            android:onClick="@{() -> viewModel.fabClickFlow.tryEmit(FabClick.UpdateRecipeFavorite)}"
            android:text="@{viewModel.liveRecipe.favorite == true ? @string/cancelFavorite : @string/registFavorite}"
            app:layout_constraintBottom_toTopOf="@id/button_summary_edit"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_edit"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@drawable/ic_edit_white_16dp"
            android:onClick="@{() -> viewModel.openRecipeEditor()}"
            android:text="@string/edit"
            app:layout_constraintBottom_toTopOf="@id/button_summary_delete"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_delete"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@drawable/ic_trash_white_16dp"
            android:onClick="@{() -> viewModel.fabClickFlow.tryEmit(FabClick.RequestDeleteConfirm)}"
            android:text="@string/delete"
            app:layout_constraintBottom_toTopOf="@id/button_summary_upload"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_upload"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@drawable/ic_upload_white_16dp"
            android:onClick="@{() -> viewModel.fabClickFlow.tryEmit(FabClick.UploadRecipe)}"
            android:text="@string/upload"
            app:layout_constraintBottom_toTopOf="@id/button_summary_stealFavorite"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_stealFavorite"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@drawable/ic_star_white_16dp"
            android:onClick="@{() -> viewModel.fabClickFlow.tryEmit(FabClick.SaveRecipeToLocalWithFavorite)}"
            android:text="@string/steal_favorite"
            app:layout_constraintBottom_toTopOf="@id/button_summary_steal"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summary_steal"
            style="@style/SummaryFloatingButton"
            android:drawableEnd="@drawable/ic_directions_walk_white_16dp"
            android:onClick="@{() -> viewModel.fabClickFlow.tryEmit(FabClick.SaveRecipeToLocal)}"
            android:text="@string/steal"
            app:layout_constraintBottom_toTopOf="@id/floatingActionButton_summary"
            app:layout_constraintEnd_toEndOf="@id/floatingActionButton_summary" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bottomButton_margin"
            app:cardCornerRadius="@dimen/bottomButton_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{() -> viewModel.openRecipeDetail()}"
                android:padding="@dimen/bottomButton_padding"
                android:text="@string/showRecipe"
                android:textColor="@color/light_100"
                android:textSize="@dimen/bottomButton_textSize" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
